--- a/templates/company_data.html
+++ b/templates/company_data.html
@@ -1,30 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ details.Name }} Details</title>
-</head>
-<body>
-    <h1>{{ details.Name }} Details</h1>
-    
-    <p><strong>Symbol:</strong> {{ details.Symbol }}</p>
-    <p><strong>Description:</strong> {{ details.Description }}</p>
-    <p><strong>Industry:</strong> {{ details.Industry }}</p>
-    <p><strong>Sector:</strong> {{ details.Sector }}</p>
-
-    <h2>Financial Details</h2>
-    <p><strong>Open:</strong> {{ details.Open }}</p>
-    <p><strong>Close:</strong> {{ details.Close }}</p>
-    <p><strong>High:</strong> {{ details.High }}</p>
-    <p><strong>Low:</strong> {{ details.Low }}</p>
-    <p><strong>Average:</strong> {{ details.Average }}</p>
-    <p><strong>Volume:</strong> {{ details.Volume }}</p>
-
-</body>
-</html>
- -->
-
  <!DOCTYPE html>
  <html lang="en">
  <head>
@@ -99,30 +72,12 @@
              <th>Financial Attribute</th>
              <th>Value</th>
          </tr>
+         
          <tr>
-             <td><strong>Open:</strong></td>
-             <td>{{ details.Open }}</td>
-         </tr>
-         <tr>
-             <td><strong>Close:</strong></td>
+             <td><strong>Current_price:</strong></td>
              <td>{{ details.Close }}</td>
          </tr>
-         <tr>
-             <td><strong>High:</strong></td>
-             <td>{{ details.High }}</td>
-         </tr>
-         <tr>
-             <td><strong>Low:</strong></td>
-             <td>{{ details.Low }}</td>
-         </tr>
-         <tr>
-             <td><strong>Average:</strong></td>
-             <td>{{ details.Average }}</td>
-         </tr>
-         <tr>
-             <td><strong>Volume:</strong></td>
-             <td>{{ details.Volume }}</td>
-         </tr>
+         
      </table>
  </body>
  </html>
